--- a/src/Gelf.Extensions.Logging/Gelf.Extensions.Logging.csproj
+++ b/src/Gelf.Extensions.Logging/Gelf.Extensions.Logging.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <VersionPrefix>0.1.0</VersionPrefix>
-    <TargetFrameworks>netstandard2.0;netstandard1.3</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <PackageProjectUrl>https://github.com/mattwcole/gelf-extensions-logging</PackageProjectUrl>
     <RepositoryUrl>https://github.com/mattwcole/gelf-extensions-logging</RepositoryUrl>
     <Copyright>2017 Matt Cole</Copyright>
